--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -13,7 +13,7 @@
 @import 'layout/header', 'layout/footer';
 
 // Components
-@import 'components/select', 'components/animation', 'components/popup';
+@import 'components/select', 'components/animation', 'components/popup', 'components/form';
 
 // Page-specific styles
 // @import
