cards & KYC & status

--- a/src/assets/sass/abstracts/_variables.scss
+++ b/src/assets/sass/abstracts/_variables.scss
@@ -14,6 +14,8 @@ $color-secondary: hsl(223, 22%, 16%) !default;
 
 $color-brand: hsl(41.6, 56.3%, 70.4%) !default;
 
-$color-error: hsla(0, 85%, 46%, 0.361);
+$color-error: hsla(0, 85%, 46%, 0.2);
+
+$color-success: hsla(133, 85%, 46%, 0.178);
 
 $width-max: 1280px !default;
