--- a/src/assets/sass/themes/_default.scss
+++ b/src/assets/sass/themes/_default.scss
@@ -648,6 +648,7 @@ main {
 }
 
 .card-form {
+    position: relative;
     &__input {
         background: transparent;
         display: block;
@@ -655,10 +656,16 @@ main {
         font-size: 16px;
         letter-spacing: 6px;
         margin: 0;
-        padding: 0;
+        padding: 10px;
         text-shadow: 7px 6px 10px rgba(3, 6, 10, 0.55);
         word-break: break-all;
         text-align: center;
+        max-width: 300px;
+        width: 100vw;
+        border: 1px solid rgba(204, 204, 204, 0.4);
+        // safari
+        -webkit-appearance: none;
+        outline: none;
 
         @include breakpoints(tablet) {
             font-size: 14px;
