--- a/src/assets/sass/components/_form.scss
+++ b/src/assets/sass/components/_form.scss
@@ -12,8 +12,9 @@
 
     &__col {
         background-color: hsla(222, 25%, 10%, 0.4);
-        background-size: cover;
-        background-position: center;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: right;
         margin: 1em 0;
         padding: 4em 2em;
         display: grid;
