--- a/src/assets/sass/themes/_default.scss
+++ b/src/assets/sass/themes/_default.scss
@@ -617,17 +617,25 @@ main {
 }
 
 .create {
+    position: relative;
     &__i {
         border: 1px dashed #ccc;
         border-radius: 15px;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 100%;
         height: 100vh;
-        max-width: 420px;
+        max-width: 442px;
         max-height: 260px;
         margin: 0 auto;
+        position: relative;
+
+        @include breakpoints(phone) {
+            max-width: 100%;
+        }
+
         svg {
             width: 100%;
             max-width: 26px;
@@ -640,10 +648,12 @@ main {
         color: #ccc;
         width: 100%;
         text-align: center;
-        margin: 1em 0 0 !important;
-        position: absolute;
-        bottom: 2em;
         font-weight: 100 !important;
+
+        @include breakpoints(phone) {
+            max-width: 200px;
+            word-wrap: break-word;
+        }
     }
 }
 
@@ -655,7 +665,7 @@ main {
         color: $color-primary;
         font-size: 16px;
         letter-spacing: 6px;
-        margin: 0;
+        margin: 2em 0 2em !important;
         padding: 10px;
         text-shadow: 7px 6px 10px rgba(3, 6, 10, 0.55);
         word-break: break-all;
@@ -672,6 +682,7 @@ main {
         }
         @include breakpoints(phone) {
             letter-spacing: 3px;
+            max-width: 226px;
         }
     }
 }
