--- a/src/assets/sass/components/_header.scss
+++ b/src/assets/sass/components/_header.scss
@@ -19,6 +19,18 @@
             margin: 0 auto 0 0;
         }
 
+        &__git {
+            fill: $color--brand;
+
+            @include breakpoints(phone) {
+                display: none !important;
+            }
+
+            svg {
+                vertical-align: baseline;
+            }
+        }
+
         &__nav {
             fill: $color--text;
 
@@ -29,7 +41,8 @@
     }
 
     .nav {
-        align-self: center;
+        align-items: center;
+        display: inline-flex;
 
         span {
             cursor: pointer;
@@ -39,6 +52,7 @@
             color: $color--text;
             display: inline-block;
             margin: 0 0 0 2em;
+            width: max-content;
 
             &:hover {
                 opacity: $template--opacity;
@@ -57,6 +71,7 @@
 
     .locale {
         align-self: center;
+        display: block;
 
         &__i {
             margin: 0 0 0 2em;
@@ -113,7 +128,13 @@
 }
 
 .visible {
-    display: block !important;
+    @include breakpoints(phone) {
+        display: block !important;
+    }
+
+    @include breakpoints(tablet) {
+        display: inline-flex;
+    }
 }
 
 .router-link-exact-active {
